@@ -39,6 +39,12 @@ Version CVS HEAD (?)
   * Mac OS X: try to launch the GUI on the process's "main" thread
   * show build date and libgig version number in about dialog
   * added dialog for editing the CtrlTrigger and Legato midi rules
+  * if there is no region yet, show a red hint text to the user that he may
+    right click on the region chooser area to add a region
+  * added tooltips to main menu entries (was buggy before)
+  * added tooltips to instruments tree view and samples tree view
+  * added various tooltips and adjusted some labels on the region settings
+    pane
 
 Version 0.2.0 (2009-07-31)
 
